# Software-Renderer

./: .gitignore  CMakeLists.txt  README.md  a.out  geometry.cpp  geometry.hpp  main.cpp  model.cpp  model.hpp  output.tga  tgaimage.hpp
src/: CMakeLists.txt  a.out  barycentric.cpp  graphicsPipeline.cpp  graphicsPipeline.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp  shader.cpp  shader.hpp  tgaimage.cpp  triangle.cpp  triangle.hpp  utils.cpp  utils.hpp
